<resources>
    <string name="app_name">SimpelSi</string>
    <string name="Selamatdatang">Selamat Datang</string>
    <string name="deskripsi">
        Bersama kita wujudkan lingkungan yang bersih, hijau, dan berkelanjutan.
        Mari berpartisipasi aktif dalam menjaga kelestarian alam demi masa depan yang lebih baik.
    </string>
    <string name="mulai">Mulai</string>

    <!-- ✅ SERVER CLIENT ID GOOGLE SIGN-IN -->
    <string name="server_client_id">
        625117876303-707tdpdp7qf20u1lbf9mqa9kvgnki36s.apps.googleusercontent.com
    </string>
    <string name="keluar">Keluar</string>
    <string name="apakah_anda_ingin_keluar">Apakah anda ingin keluar</string>
    <string name="website">website</string>
    <string name="visi_misi">Visi &amp; Misi</string>
    <string name="profil_kami">Profil kami</string>
    <string name="profil">Profil</string>
    <string name="kembali">Kembali</string>
    <string name="versi_0.1">Versi 1.0</string>
</resources>
